--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,16 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
+<!--    <dependency>-->
+<!--      <groupId>org.postgresql</groupId>-->
+<!--      <artifactId>postgresql</artifactId>-->
+<!--      <scope>runtime</scope>-->
+<!--    </dependency>-->
+
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
+      <version>42.7.7</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
