--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ecomerce
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
