--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ecomerce
 spring.datasource.url=jdbc:postgresql://localhost:5432/ecomerce
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=123456
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -10,8 +10,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 # Configuración de recursos estáticos
 spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
 spring.web.resources.add-mappings=true
